# learning-rust-with-projects

concurrent-status-checker/: Cargo.toml  Project.md
concurrent-status-checker/src/: main.rs
etl-pipeline/: Cargo.toml  Project.md  output.txt
etl-pipeline/src/: main.rs
git_inspector/: Cargo.toml  Project.md
git_inspector/src/: main.rs
rpn-calc/: Cargo.toml  Project.md
rpn-calc/src/: main.rs
url_shortner/: .env  Cargo.toml  docker-compose.yml
url_shortner/migrations/: 20251223234418_create_short_urls.sql
url_shortner/src/: app_state.rs  main.rs
url_shortner/src/adaptors/: http.rs  mod.rs
url_shortner/src/adaptors/cache/: redis.rs
url_shortner/src/adaptors/persistance/: postgres.rs
url_shortner/src/application/: error.rs  mod.rs  ports.rs  use_cases.rs
url_shortner/src/domain/: mod.rs  short_url.rs
url_shortner/src/infrastructure/: db.rs
zero-copy-log-parser/: Cargo.toml  Project.md
zero-copy-log-parser/src/: main.rs
