[package]
name = "url_shortner"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
async-trait = "0.1.89"
dotenv = "0.15.0"
nanoid = "0.4.0"
redis = {version = "1.0.1", features = ["tokio-comp"]}
serde_json = "1.0.146"
sqlx = {version = "0.8.6",features = ["postgres","runtime-tokio-rustls","time","macros"]}
tokio = {version = "1.48.0",features = ["full"]}
